# hev

./: .gitignore  APP_IDENTITY.txt  PANEL_CONFIG.txt  README.md  SELLER_CODE.txt  btserver_install.sh  e  gradle.properties  settings.gradle.kts
.github/workflows/: build-hev-android.yml  build-panel-apk.yml  build.yml  clone-hev-socks5.yml  create-apk-stable-3.yml  create-xray-stable2.yml
Implementar/: CMakeLists.txt  btproxy.c
app/: app-config.properties  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  btproxy.c  hev_jni.cpp
app/src/main/jniLibs/arm64-v8a/: README.md
app/src/main/res/anim/: fade_slide_in.xml  shake.xml
app/src/main/res/animator/: btn_press.xml  pulse.xml  status_halo_wave.xml
app/src/main/res/color/: switch_thumb_gaming.xml  switch_track_gaming.xml
app/src/main/res/drawable/: bg_app_gradient.xml  bg_atmosphere.xml  bg_card_gaming_off.xml  bg_card_gaming_on.xml  bg_card_header.xml  bg_card_metrics.xml  bg_connected.xml  bg_connection_panel.xml  bg_disconnect_overlay_panel.xml  bg_gaming_mode_panel.xml  bg_main_gradient.xml  bg_status_info_card.xml  btn_connect_selector.xml  btn_connecting_selector.xml  btn_disconnect_selector.xml  hud_btn_connect.xml  hud_btn_ring_mid.xml  hud_btn_ring_outer.xml  hud_circle_bg.xml  hud_corner_tl.xml  hud_cross_line.xml  hud_glow_ring.xml  hud_panel_data.xml  hud_panel_id.xml  hud_panel_metrics.xml  hud_ring_inner.xml  (+26 more)
gradle/wrapper/: gradle-wrapper.ja
scripts/: install_btserver.sh  prepare_ci_sources.sh
server/: smux_fake_ws_gateway.py
(+59 files in other folders)
